fix(mobile): fixed android 14 compatability

--- a/src/CSAuto_Mobile/AndroidManifest.xml
+++ b/src/CSAuto_Mobile/AndroidManifest.xml
@@ -9,5 +9,6 @@
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
 	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="34" />
 </manifest>
