fix(continue_spraying): using cfg to send commands to game fix(capture): switch to old capture when window is not in main desktop

--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -102,6 +102,7 @@
     <Compile Include="AutoBuyMenu.cs" />
     <Compile Include="CompileInfo.cs" />
     <Compile Include="Native\DisplayInfo.cs" />
+    <Compile Include="Utils\CSGO\BindCommandSender.cs" />
     <Compile Include="Windows\DebugInfo.xaml.cs">
       <DependentUpon>DebugInfo.xaml</DependentUpon>
     </Compile>
