feat(telegram): added markdown support feat(crashes): added automatic sending feat(keys): made them harder to get

--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -216,6 +216,7 @@
     <EmbeddedResource Include="APIKeys.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>APIKeys.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
