feat(lang): use ISO 639-1 codes feat(lang): added auto assigning to default language windows is on

--- a/src/CSAuto/App.config
+++ b/src/CSAuto/App.config
@@ -53,7 +53,7 @@
                 <value>False</value>
             </setting>
             <setting name="currentLanguage" serializeAs="String">
-                <value>language_english</value>
+                <value />
             </setting>
             <setting name="acceptedNotification" serializeAs="String">
                 <value>True</value>
