--- a/src/SteamAPIServer/SteamAPIServer.csproj
+++ b/src/SteamAPIServer/SteamAPIServer.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CSAuto\Shared\StreamString.cs">
+      <Link>StreamString.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
