--- a/src/CSAuto_Mobile/CSAuto_Mobile.csproj
+++ b/src/CSAuto_Mobile/CSAuto_Mobile.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\CSAuto\Shared\NetworkTypes.cs" Link="NetworkTypes.cs" />
-    <Compile Include="..\CSAuto\Utils\CSGO\GameState.cs" Link="GameState.cs" />
+    <Compile Include="..\CSAuto\Utils\CS\GameState.cs" Link="GameState.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
