feat(debug): add git hash, and add system info

--- a/Misc/CompileData.template
+++ b/Misc/CompileData.template
@@ -4,5 +4,6 @@ namespace CSAuto
     {
         public static string Date = "{date}";
         public static string Time = "{time}";
+		public static string GitHash = "{gitHash}";
     }
 }
