remove(mobile): removed mobile app as it is broken and not really used by anyone :)

--- a/src/Deprecated/CSAuto_Mobile/CSAuto_Mobile.csproj
+++ b/src/Deprecated/CSAuto_Mobile/CSAuto_Mobile.csproj
@@ -1,13 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0-android34.0</TargetFramework>
+    <TargetFramework>net10.0-android</TargetFramework>
     <OutputType>Exe</OutputType>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationId>com.murky.csauto</ApplicationId>
     <ApplicationVersion>1</ApplicationVersion>
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
-    <SupportedOSPlatformVersion>24.0</SupportedOSPlatformVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\CSAuto\Shared\NetworkTypes.cs" Link="NetworkTypes.cs" />
@@ -15,7 +14,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
-    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.15.0.1" />
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.17.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
